--- a/config2/locales/es.yml
+++ b/config2/locales/es.yml
@@ -19,9 +19,9 @@ es:
 
   conversation_builders:
     composing:
-      title: Seleccione el producto y todos los tipos de transacciones que admitirá la conversación.
+      title: ""
       product_name_tooltip: "Este nombre se usará cuando hagamos referencia a la cuenta del usuario o al tipo de producto en la mensajería. Si deja esto en blanco, los mensajes se referirán a 'su cuenta'. Máximo 20 caracteres"
-      program_name_tooltip: "Este nombre aparecerá como un encabezado en todos los mensajes seguido de dos puntos. Si no se especifica ningún programa, el encabezado será el nombre de su institución. Máximo 12 caracteres"
+      program_name_tooltip: ""
       conversation_name_tooltip: Este será el nombre de su conversación en su biblioteca de conversación
       conversation_name_placeholder: "%{product} conversacion"
     selecting_target_audience:
